[gd_scene load_steps=20 format=3 uid="uid://hif8s1oisfia"]

[ext_resource type="Texture2D" uid="uid://daj13yjstrpby" path="res://Sprites/Bordes/bordes.png" id="1_ioduh"]
[ext_resource type="Script" path="res://Escenarios/Nivel/Nivel1/nivel_1.gd" id="1_wcxyj"]
[ext_resource type="Texture2D" uid="uid://ccfsiwhmk4wbt" path="res://Sprites/Portal/portal.png" id="2_sy0ix"]
[ext_resource type="AudioStream" uid="uid://dvjfwui4vv74t" path="res://Sonidos/Objeto_toca_puerta.mp3" id="3_a24fu"]
[ext_resource type="PackedScene" uid="uid://1d73vllafqvs" path="res://Escenarios/Obstaculo/obstaculo.tscn" id="3_d1656"]
[ext_resource type="Texture2D" uid="uid://byl86ufvlr7tv" path="res://Sprites/Portal/GPbOtliWAAAr1i4.png" id="4_0by5p"]
[ext_resource type="AudioStream" uid="uid://8rv8c4mh8k4k" path="res://Sonidos/1SPACE_MELODY_1.mp3" id="7_q6kbh"]
[ext_resource type="AudioStream" uid="uid://bjjyrna2w3ee8" path="res://Sonidos/GAME_OVER.mp3" id="8_ce2cg"]
[ext_resource type="Texture2D" uid="uid://bubbmfial5ogu" path="res://icon.svg" id="9_5orl8"]
[ext_resource type="AudioStream" uid="uid://b7pcpw34gwj5e" path="res://Sonidos/cute_level_up_3_189853_1.mp3" id="10_7uje3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hfow"]
size = Vector2(1333, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1t8tl"]
size = Vector2(1325, 34.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mh3nq"]
size = Vector2(44, 705)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8q7u"]
size = Vector2(20, 745)

[sub_resource type="CircleShape2D" id="CircleShape2D_8420f"]
radius = 18.0278

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txewt"]
bg_color = Color(0, 0.141176, 0.239216, 1)
border_width_left = 10
border_width_top = 8
border_width_right = 10
border_width_bottom = 7
border_color = Color(0.12549, 0.831373, 0.568627, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rg5e"]
bg_color = Color(0.00043817, 0.142303, 0.239843, 1)
border_width_left = 12
border_width_top = 10
border_width_right = 12
border_width_bottom = 9
border_color = Color(0.12549, 0.831373, 0.568627, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l2odi"]
bg_color = Color(0, 0.141176, 0.239216, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.12549, 0.831373, 0.568627, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_j7rfo"]
Button/styles/hover = SubResource("StyleBoxFlat_txewt")
Button/styles/normal = SubResource("StyleBoxFlat_6rg5e")
Button/styles/pressed = SubResource("StyleBoxFlat_l2odi")

[node name="Nivel1" type="Node2D"]
script = ExtResource("1_wcxyj")

[node name="BordesSpawn" type="Node2D" parent="."]

[node name="BordeArriba" type="Node2D" parent="BordesSpawn"]
position = Vector2(183, -1)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeArriba"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeArriba"]
position = Vector2(912, 0)

[node name="BordeAbajo" type="Node2D" parent="BordesSpawn"]
position = Vector2(377, 717)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeAbajo"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeAbajo"]
position = Vector2(766, 0)

[node name="BordeIzquierdo" type="Node2D" parent="BordesSpawn"]
position = Vector2(-8, 133)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeIzquierdo"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeIzquierdo"]
position = Vector2(0, 439)

[node name="BordeDerecho" type="Node2D" parent="BordesSpawn"]
position = Vector2(1287, 155)

[node name="A" type="Marker2D" parent="BordesSpawn/BordeDerecho"]

[node name="B" type="Marker2D" parent="BordesSpawn/BordeDerecho"]
position = Vector2(0, 428)

[node name="Objetos" type="Node2D" parent="BordesSpawn"]
position = Vector2(-108, 31)

[node name="BordeArriba" type="Area2D" parent="." groups=["BordeArriba"]]
position = Vector2(-9, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeArriba"]
position = Vector2(640, -3)
shape = SubResource("RectangleShape2D_5hfow")

[node name="Bordes" type="Sprite2D" parent="BordeArriba"]
position = Vector2(633.75, -10)
scale = Vector2(5.14706, 0.0645161)
texture = ExtResource("1_ioduh")

[node name="BordeAbajo" type="Area2D" parent="." groups=["BordeAbajo"]]
position = Vector2(-5, 725)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeAbajo"]
position = Vector2(623.5, 2.75)
shape = SubResource("RectangleShape2D_1t8tl")

[node name="Bordes" type="Sprite2D" parent="BordeAbajo"]
position = Vector2(621.25, 4)
scale = Vector2(5.13529, 0.112903)
texture = ExtResource("1_ioduh")

[node name="BordeIzquierdo" type="Area2D" parent="." groups=["BordeIzquierdo"]]
position = Vector2(-2, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeIzquierdo"]
position = Vector2(-10, 347)
shape = SubResource("RectangleShape2D_mh3nq")

[node name="Bordes" type="Sprite2D" parent="BordeIzquierdo"]
position = Vector2(-10.5, 345)
scale = Vector2(0.129412, 2.87903)
texture = ExtResource("1_ioduh")

[node name="BordeDrecho" type="Area2D" parent="." groups=["BordeDerecho"]]
position = Vector2(1281, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeDrecho"]
position = Vector2(2, 363.5)
shape = SubResource("RectangleShape2D_s8q7u")

[node name="Bordes" type="Sprite2D" parent="BordeDrecho"]
position = Vector2(5.25, 357)
scale = Vector2(0.0686275, 2.91935)
texture = ExtResource("1_ioduh")

[node name="Salida" type="Area2D" parent="."]
position = Vector2(201, 76)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Salida"]
position = Vector2(14, 8)
shape = SubResource("CircleShape2D_8420f")

[node name="Icon" type="Sprite2D" parent="Salida"]
position = Vector2(13, 6)
texture = ExtResource("2_sy0ix")

[node name="Objeto colisiona con portal" type="AudioStreamPlayer2D" parent="Salida"]
stream = ExtResource("3_a24fu")

[node name="Obstaculo" parent="." instance=ExtResource("3_d1656")]
position = Vector2(140, 141)
rotation = -0.815851
scale = Vector2(0.0197113, 0.159967)

[node name="Obstaculo2" parent="." instance=ExtResource("3_d1656")]
position = Vector2(809, 580)
rotation = -0.815851
scale = Vector2(0.0214308, 0.25372)

[node name="Obstaculo3" parent="." instance=ExtResource("3_d1656")]
position = Vector2(209, 461)
rotation = -1.49541
scale = Vector2(0.0214308, 0.310258)

[node name="Obstaculo4" parent="." instance=ExtResource("3_d1656")]
position = Vector2(1119, 272)
rotation = -2.5204
scale = Vector2(0.0214308, 0.245205)

[node name="GPbOtliWaaAr1i4" type="Sprite2D" parent="."]
visible = false
z_index = -6
position = Vector2(738, 288)
texture = ExtResource("4_0by5p")

[node name="misionBusqueda" type="Label" parent="."]
offset_left = 545.0
offset_top = 32.0
offset_right = 585.0
offset_bottom = 55.0
text = "objetivos"
metadata/_edit_use_anchors_ = true

[node name="objetivosCumplidos" type="Label" parent="."]
offset_left = 550.0
offset_top = 65.0
offset_right = 621.0
offset_bottom = 88.0
text = "objetivos"
metadata/_edit_use_anchors_ = true

[node name="Musica de fondo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_q6kbh")

[node name="Game Over" type="AudioStreamPlayer2D" parent="."]
process_mode = 2
position = Vector2(582, 364)
stream = ExtResource("8_ce2cg")

[node name="Timer" type="Timer" parent="."]

[node name="TextTemporizador" type="Label" parent="."]
offset_left = 30.0
offset_top = 23.0
offset_right = 70.0
offset_bottom = 46.0

[node name="victoria" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 468.0
offset_top = 217.0
offset_right = 508.0
offset_bottom = 257.0

[node name="MarginContainer" type="MarginContainer" parent="victoria"]
layout_mode = 0
offset_left = -96.0
offset_top = -99.0
offset_right = 404.0
offset_bottom = 401.0

[node name="TextureRect" type="TextureRect" parent="victoria/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_5orl8")

[node name="HBoxContainer" type="HBoxContainer" parent="victoria/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="butonNivel" type="Button" parent="victoria/MarginContainer/HBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme = SubResource("Theme_j7rfo")
theme_override_font_sizes/font_size = 31
text = "Vonver a Menú"

[node name="GanarPerder" type="Label" parent="victoria/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 83
text = "¡¡Perdiste!!"

[node name="Sonido de victoria" type="AudioStreamPlayer2D" parent="victoria"]
stream = ExtResource("10_7uje3")

[connection signal="area_entered" from="Salida" to="." method="_on_salida_area_entered"]
[connection signal="button_down" from="victoria/MarginContainer/HBoxContainer/butonNivel" to="." method="_on_buton_nivel_button_down"]
